# cloud-mover

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-TW.md  pyproject.toml
docs/plans/: 2026-02-02-cloud-mover.md  2026-02-03-simplify-cloud-mover.md
src/cloud_mover/: __init__.py  database.py  main.py  models.py  schemas.py
src/cloud_mover/routers/: api.py
src/cloud_mover/services/: auth.py  backup.py  cleanup.py
tests/: test_api.py  test_auth.py
