[project]
name = "cloud-mover"
version = "0.1.0"
description = "Claude Code Migration Helper API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7.0",
]

[project.scripts]
cloud-mover = "cloud_mover.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_mover"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
